--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   color:black; 
-
+  background-image: url("./images/wall_backdrop.jpeg");
 }
 
 code {
