--- a/src/navbar.css
+++ b/src/navbar.css
@@ -1,12 +1,12 @@
 .navbar {
     display: flex;
     background-color: rgb(255, 250, 250);
-    padding: 30px 0px 20px 30px;
+    padding: 30px 10px 20px 20px;
     max-height: 100px;
     color: rgb(0, 0, 0);
     width: 1000px;
-    margin: 0 auto;
-    opacity: 0.9;
+    margin: 15px auto;
+    opacity: 0.7;
 }
 
 .navbar-name {
@@ -27,6 +27,7 @@
 .navbar-logo {
     width: 200px;
     height: 120px;
+    
 }
 
 .nav-vertical{
