--- a/src/searchField.css
+++ b/src/searchField.css
@@ -37,10 +37,12 @@
     border-style: none;
     font-weight: bold;
     margin-right: 20px;
+    cursor: pointer;
 }
 .submit-btn:hover {
     box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
     background-color: rgb(255, 255, 255);
+    
 }
 .label{
     padding-left: 150px;
